# log4lab

./: .gitignore  LICENSE  Makefile  README.md  demo-export.html  example.jsonl  my_custom_logs.jsonl  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml
log4lab/: cli.py  export.py  tail.py
log4lab/templates/: index.html  runs.html
logboard/: cli.py  server.py
logboard/templates/: index.html  runs.html
tests/: __init__.py  test_server.py
