[project]
name = "log4lab"
version = "0.1.0"
description = "A lightweight structured log viewer with live streaming and filters."
authors = [{ name = "Thibaut Lamadon" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "typer",
    "rich>=13.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24"
]
images = [
    "term-image>=0.7.0"
]

[project.scripts]
log4lab = "log4lab.cli:app"

[tool.setuptools]
packages = ["log4lab"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
