[project]
name = "log4lab"
version = "0.1.0"
description = "A lightweight structured log viewer with live streaming and filters."
authors = [{ name = "Thibaut Lamadon" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = [
    "logging",
    "log-viewer",
    "structured-logs",
    "jsonl",
    "monitoring",
    "dashboard",
    "live-streaming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "typer",
    "rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/tlamadon/log4lab"
Repository = "https://github.com/tlamadon/log4lab"
Issues = "https://github.com/tlamadon/log4lab/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24"
]
images = [
    "term-image>=0.7.0"
]

[project.scripts]
log4lab = "log4lab.cli:app"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
log4lab = ["templates/*.html"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
